--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -5,8 +5,10 @@ body {
     color: black;
     font-size: 16px;
     --transition-speed: 600ms;
-    background-image: url('./download.jpg');
+ 
+    
 }
+
   
 ul{
     list-style: none;
@@ -14,7 +16,8 @@ ul{
     display: flex;
     flex-direction: row;
     align-items: center;
-    
+    background-image: url('./images-2.jpg');
+   object-fit: cover;
   }
 
   
@@ -39,21 +42,22 @@ ul{
   
   a svg {
     width: 1rem;
-    min-width: 3rem;
-    margin: 0 1.5rem;
+    min-width: 2rem;
+    margin: 0 rem;
   }
   
   
 #nav{
     text-align: center;
-    color: #808000;
+    color: black;
     background: #71BC78;
-    font-size: 18px;
-    width: 110px;
-    height: 60px;
-    border-radius: 50%;
-    margin-right: 10px;
-
+    font-size: 15px;
+    width: 120px;
+    height: 75px;
+    border-radius: 12px 300px 5px 300px;
+    margin-right: 6px;
+justify-items: center;
+background-image: url('./download.jpg')
  
   }
   
@@ -68,9 +72,12 @@ ul{
     100% {  transform: rotate(359deg); }
 }
 
-.format {
-    color: black;
+.format{
+    color: #fffacd !important;
+    display: block;
     text-align: right;
-    margin-left: 200px;
-    font-size: 28px
+    margin-left: 50vw;
+    font-size: 28px;
+    opacity: 1
+
 }
