--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -16,8 +16,7 @@ ul{
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-image: url('./images.jpg');
-
+    background-color: #fefdb8;
   }
 
   
