--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -35,8 +35,9 @@
 .title {
   justify-self: start;
   margin-left: 20px;
-  font-size: 50px;
+  font-size: 60px;
   font-weight: 600;
+  word-wrap: break-word;
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQW3ix2NzkDNtUnwDrMhpBto5aAOhZuur2lrQ&usqp=CAU);
   background-size: 250px;
   background-repeat: repeat;
