--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -37,7 +37,7 @@
   margin-left: 20px;
   font-size: 60px;
   font-weight: 600;
-  word-wrap: break-word;
+  word-wrap: normal;
   background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQW3ix2NzkDNtUnwDrMhpBto5aAOhZuur2lrQ&usqp=CAU);
   background-size: 250px;
   background-repeat: repeat;
